TradeMarketing/force-app/main/default/objects/Account/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Great Plains Customer Account Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Great Plains Customer Account Number</inlineHelpText>
    <label>Account #</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>