TradeMarketing/force-app/main/default/objects/Account/fields/City_Life_Price__c.field-meta.xml
<CustomField>
    <fullName>City_Life_Price__c</fullName>
    <label>City Life Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>