TradeMarketing/force-app/main/default/objects/Account/fields/Disclosed_ACH_Program__c.field-meta.xml
<CustomField>
    <fullName>Disclosed_ACH_Program__c</fullName>
    <label>Disclosed ACH Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>