TradeMarketing/force-app/main/default/objects/Account/fields/Discuss_MSA_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Discuss_MSA_Reporting__c</fullName>
    <label>Discuss MSA Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>