TradeMarketing/force-app/main/default/objects/Account/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <description>Add additional emails in this field</description>
    <inlineHelpText>Add additional emails in this field</inlineHelpText>
    <label>Email1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>