TradeMarketing/force-app/main/default/objects/Account/fields/Enlisted_in_ACH__c.field-meta.xml
<CustomField>
    <fullName>Enlisted_in_ACH__c</fullName>
    <label>ACH Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>