TradeMarketing/force-app/main/default/objects/Account/fields/Flat_Wrap_Price__c.field-meta.xml
<CustomField>
    <fullName>Flat_Wrap_Price__c</fullName>
    <label>Flat Wrap Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>