TradeMarketing/force-app/main/default/objects/Account/fields/GT_1_1_4_Rolling_PPR_Price__c.field-meta.xml
<CustomField>
    <fullName>GT_1_1_4_Rolling_PPR_Price__c</fullName>
    <label>GT 1 1/4 Rolling PPR Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>