TradeMarketing/force-app/main/default/objects/Account/fields/GT_3_99_PK_Price__c.field-meta.xml
<CustomField>
    <fullName>GT_3_99_PK_Price__c</fullName>
    <label>GT 3/99 PK Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>