TradeMarketing/force-app/main/default/objects/Account/fields/GT_3_99_Price__c.field-meta.xml
<CustomField>
    <fullName>GT_3_99_Price__c</fullName>
    <inlineHelpText>List the selling price to retail of this brand family.</inlineHelpText>
    <label>GT 3/99 PCH DD Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>