TradeMarketing/force-app/main/default/objects/Account/fields/HD_Price__c.field-meta.xml
<CustomField>
    <fullName>HD_Price__c</fullName>
    <inlineHelpText>List the selling price to retail of this brand family.</inlineHelpText>
    <label>HD DD Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>