TradeMarketing/force-app/main/default/objects/Account/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Active</description>
    <inlineHelpText>Check if customer is active</inlineHelpText>
    <label>Is_Active</label>
    <type>Checkbox</type>
</CustomField>