TradeMarketing/force-app/main/default/objects/Account/fields/License_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Exp_Date__c</fullName>
    <description>License expiration date</description>
    <inlineHelpText>Tobacco License expiration date</inlineHelpText>
    <label>License_Exp_Date</label>
    <type>Date</type>
</CustomField>