TradeMarketing/force-app/main/default/objects/Account/fields/License_Num__c.field-meta.xml
<CustomField>
    <fullName>License_Num__c</fullName>
    <description>Customer License Number</description>
    <inlineHelpText>Customer License Number</inlineHelpText>
    <label>License_Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>