TradeMarketing/force-app/main/default/objects/Account/fields/Little_N_Wild_2_99_Pack__c.field-meta.xml
<CustomField>
    <fullName>Little_N_Wild_2_99_Pack__c</fullName>
    <label>Little N Wild 2/99 Pack</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>