TradeMarketing/force-app/main/default/objects/Account/fields/LNW_25CT_Price__c.field-meta.xml
<CustomField>
    <fullName>LNW_25CT_Price__c</fullName>
    <label>LNW 25CT Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>