TradeMarketing/force-app/main/default/objects/Account/fields/MKTING_Email__c.field-meta.xml
<CustomField>
    <fullName>MKTING_Email__c</fullName>
    <inlineHelpText>For the person who should receive sales/marketing related email blasts!</inlineHelpText>
    <label>MKTING Email</label>
    <type>Email</type>
</CustomField>