TradeMarketing/force-app/main/default/objects/Account/fields/MSA_Notes__c.field-meta.xml
<CustomField>
    <fullName>MSA_Notes__c</fullName>
    <label>MSA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>