TradeMarketing/force-app/main/default/objects/Account/fields/MSAI__c.field-meta.xml
<CustomField>
    <fullName>MSAI__c</fullName>
    <description>MSAI Number from external data source</description>
    <externalId>true</externalId>
    <label>MSAI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>