TradeMarketing/force-app/main/default/objects/Account/fields/Product_Carried__c.field-meta.xml
<CustomField>
    <fullName>Product_Carried__c</fullName>
    <label>Product Carried</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Carried</valueSetName>
    </valueSet>
</CustomField>