TradeMarketing/force-app/main/default/objects/Account/fields/Product_Present__c.field-meta.xml
<CustomField>
    <fullName>Product_Present__c</fullName>
    <label>Products to Present</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_to_Present</valueSetName>
    </valueSet>
</CustomField>