TradeMarketing/force-app/main/default/objects/Account/fields/Quarterly_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Rebate__c</fullName>
    <label>Quarterly Rebate</label>
    <type>TextArea</type>
</CustomField>