TradeMarketing/force-app/main/default/objects/Account/fields/Rebate_Customer__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate Customer</label>
    <type>Checkbox</type>
</CustomField>