TradeMarketing/force-app/main/default/objects/Account/fields/Remington_Price__c.field-meta.xml
<CustomField>
    <fullName>Remington_Price__c</fullName>
    <label>Remington Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>