TradeMarketing/force-app/main/default/objects/Account/fields/Reports_to_MSA__c.field-meta.xml
<CustomField>
    <fullName>Reports_to_MSA__c</fullName>
    <label>MSA Enrolled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>