TradeMarketing/force-app/main/default/objects/Account/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <description>Sales Rep From GP</description>
    <inlineHelpText>Sales Rep from GP. Use last name for this Field</inlineHelpText>
    <label>Sales_Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>