TradeMarketing/force-app/main/default/objects/Account/fields/Store_Count__c.field-meta.xml
<CustomField>
    <fullName>Store_Count__c</fullName>
    <description>Count of the stores that a Chain HQ has</description>
    <label>Store Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>