TradeMarketing/force-app/main/default/objects/Account/fields/Swt_Woods_Price__c.field-meta.xml
<CustomField>
    <fullName>Swt_Woods_Price__c</fullName>
    <label>Swt Woods 30/2CT Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>