TradeMarketing/force-app/main/default/objects/Account/fields/TaxPaid__c.field-meta.xml
<CustomField>
    <fullName>TaxPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if the customer is tax paid</description>
    <inlineHelpText>Check this field if the customer is tax paid</inlineHelpText>
    <label>TaxPaid</label>
    <type>Checkbox</type>
</CustomField>