TradeMarketing/force-app/main/default/objects/Account/fields/Tier_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Tier_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tier Pricing</label>
    <type>Checkbox</type>
</CustomField>