TradeMarketing/force-app/main/default/objects/Account/fields/Valid_Tobacco_License__c.field-meta.xml
<CustomField>
    <fullName>Valid_Tobacco_License__c</fullName>
    <label>Valid Tobacco License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>