TradeMarketing/force-app/main/default/objects/Account/fields/X4K_s_Price__c.field-meta.xml
<CustomField>
    <fullName>X4K_s_Price__c</fullName>
    <label>4K&#39;s Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>