TradeMarketing/force-app/main/default/objects/Account/recordTypes/Chain_Headquarters.recordType-meta.xml
<RecordType>
    <fullName>Chain_Headquarters</fullName>
    <active>true</active>
    <label>Chain Headquarters</label>
</RecordType>