TradeMarketing/force-app/main/default/objects/Account/recordTypes/Chain_Store.recordType-meta.xml
<RecordType>
    <fullName>Chain_Store</fullName>
    <active>true</active>
    <label>Chain Store</label>
</RecordType>