TradeMarketing/force-app/main/default/objects/Account/recordTypes/Convenience_Store.recordType-meta.xml
<RecordType>
    <fullName>Convenience_Store</fullName>
    <active>true</active>
    <label>Convenience Store</label>
</RecordType>