TradeMarketing/force-app/main/default/objects/Account/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>false</active>
    <label>Distributor</label>
</RecordType>