TradeMarketing/force-app/main/default/objects/Account/recordTypes/DSD.recordType-meta.xml
<RecordType>
    <fullName>DSD</fullName>
    <active>false</active>
    <label>DSD</label>
</RecordType>