TradeMarketing/force-app/main/default/objects/Account/recordTypes/Indirect_Wholesaler_or_Distributor.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Wholesaler_or_Distributor</fullName>
    <active>true</active>
    <label>Indirect Wholesaler or Distributor</label>
</RecordType>