TradeMarketing/force-app/main/default/objects/Account/recordTypes/Local_Distributor.recordType-meta.xml
<RecordType>
    <fullName>Local_Distributor</fullName>
    <active>false</active>
    <label>Local Distributor</label>
</RecordType>