TradeMarketing/force-app/main/default/objects/Account/recordTypes/National_Distributor.recordType-meta.xml
<RecordType>
    <fullName>National_Distributor</fullName>
    <active>false</active>
    <label>National Distributor</label>
</RecordType>