TradeMarketing/force-app/main/default/objects/Account/recordTypes/Regional_Chain.recordType-meta.xml
<RecordType>
    <fullName>Regional_Chain</fullName>
    <active>false</active>
    <label>Regional Chain</label>
</RecordType>