TradeMarketing/force-app/main/default/objects/Account/recordTypes/Wholesaler_or_Distributor.recordType-meta.xml
<RecordType>
    <fullName>Wholesaler_or_Distributor</fullName>
    <active>true</active>
    <label>Wholesaler or Distributor</label>
</RecordType>