TradeMarketing/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Account__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Email__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>